--- a/admin/css/search.css
+++ b/admin/css/search.css
@@ -10,7 +10,7 @@
     vertical-align: middle;
 }
 
-input, button
+#cover input, #cover button
 {
     color: #fff;
     font-family: Nunito;
@@ -22,31 +22,37 @@ input, button
 
 #cover
 {
-    width: 550px;
-    padding: 35px;
-    margin: -83px auto 0 auto;
-    background-color: #ff7575;
+    position: absolute;
+    left: -150px;
+    margin: auto;
+    width: 840px;
+    padding: 30px;
+    background-color: #D8B384;
     border-radius: 20px;
-    box-shadow: 0 10px 40px #ff7c7c, 0 0 0 20px #ffffffeb;
+    box-shadow: 0 10px 40px #D8B384, 0 0 0 20px #ffffffeb;
     transform: scale(0.6);
 }
 
-form
-{
-    height: 96px;
+#cover input{
+    outline: 0;
 }
 
-input[type="text"]
+#cover form
+{
+    height: 40px;
+}
+
+#cover input[type="text"]
 {
     width: 100%;
-    height: 96px;
-    font-size: 60px;
+    height: 40px;
+    font-size: 50px;
     line-height: 1;
 }
 
-input[type="text"]::placeholder
+#cover input[type="text"]::placeholder
 {
-    color: #e16868;
+    color: #5E454B99;
 }
 
 #s-cover
@@ -55,35 +61,34 @@ input[type="text"]::placeholder
     padding-left: 35px;
 }
 
-button
+#cover button
 {
     position: relative;
     display: block;
-    width: 84px;
-    height: 96px;
+    width: 60px;
+    height: 40px;
     cursor: pointer;
 }
 
 #s-circle
 {
     position: relative;
-    top: -8px;
+    top: -11px;
     left: 0;
-    width: 43px;
-    height: 43px;
+    width: 50px;
+    height: 50px;
     margin-top: 0;
-    border-width: 15px;
-    border: 15px solid #fff;
+    border: 12px solid #fff;
     background-color: transparent;
     border-radius: 50%;
     transition: 0.5s ease all;
 }
 
-button span
+#cover button span
 {
     position: absolute;
-    top: 68px;
-    left: 43px;
+    top: 27px;
+    left: 17px;
     display: block;
     width: 45px;
     height: 15px;
@@ -93,14 +98,14 @@ button span
     transition: 0.5s ease all;
 }
 
-button span:before, button span:after
+#cover button span:before, #cover button span:after
 {
     content: '';
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 45px;
-    height: 15px;
+    width: 28px;
+    height: 12px;
     background-color: #fff;
     border-radius: 10px;
     transform: rotateZ(0);
@@ -109,9 +114,9 @@ button span:before, button span:after
 
 #s-cover:hover #s-circle
 {
-    top: -1px;
-    width: 67px;
-    height: 15px;
+    top: 0px;
+    width: 50px;
+    height: 12px;
     border-width: 0;
     background-color: #fff;
     border-radius: 20px;
@@ -120,7 +125,7 @@ button span:before, button span:after
 #s-cover:hover span
 {
     top: 50%;
-    left: 56px;
+    left: 25px;
     width: 25px;
     margin-top: -9px;
     transform: rotateZ(0);
@@ -137,7 +142,7 @@ button span:before, button span:after
     bottom: -11px;
     transform: rotateZ(-52deg);
 }
-#s-cover:hover button span:before, #s-cover:hover button span:after
+#s-cover:hover #cover button span:before, #s-cover:hover #cover button span:after
 {
     right: -6px;
     width: 40px;
