--- a/admin/css/main_.css
+++ b/admin/css/main_.css
@@ -271,7 +271,7 @@ tbody tr:hover {
 
 
 /* CUSTOME BUTTON */
-.btn {
+/* .btn {
   background:transparent;
   text-align:center;
   letter-spacing:1px;
@@ -341,4 +341,4 @@ tbody tr:hover {
   opacity:1;
   right:10px;
   top:22%;
-}
+} */
